0.5.1
Moved all monitor data/fnctios to main application class.
Fixed getting correct monitor for window.
Added scrollable menu.
Fixed makeall script.
Fixed stack smashing errors.
Set exapander gadget to use window back colour.
Install default colour scheme to ~/.config/LFS on first run of library.
Added default colour scheme.
Fixed about example.
Fixed not not setting button font colour form prefs.
Set default time out in app class.
Code clean.
Fixed paths in installed themes.
Fixed live update on font dialog.
Fixed lineedit size in expander gadget.
Fixed set label colour.
New prefs class.
Updates to config file format.
Fixed window pixmap.
Extra API's.
Removed unneeded xsync's.
Fixed paste in line edit.
Added default cut/copy/paste context menu to line edit.
Added drop callback on multiline edit.
Cleaned dropping file on (multi)line edit.
Fixed .desktop file preview in file dialog.
Code clean.

0.5.0
Fixed dragging image.
Removed unneeded xflush/xsync.
Updated basic example to show drop on gadget.
All gadgets can now handle DnD.
Fixed themepaths in installed themes.
Fixed display correct checkbox png.
Fixed memory leaks.
Fixed not picking up png's for check box.
Fixed spurious scrollbar events.
Fixed theme path prefs.
Fixed tool window events.
Updated all examples.
Added reload globals to LFSTK_lib.
Fixed clearing window and gadgets after updating window background.
Added timer callback to app class.
Added timer to app main loop.
Fixed dNd on windows and gadgets.
Removed unneeded callback code.
Redone callbacks.
Fixed seg fault when expanding lists.
Fixed memory leaks in various gadgets.
Updated examples.
Added live update for expander gadgets.
Fixed tool window.
Fixed menus.
Require use of app class.
Fixed memory leaks in list gadget.
Added main loop to app class.
Added new application class.

0.4.6
Improved getting file mimetype and themed icon.
Fixed website address in about box.
Fixed input focus on list gadgets.